Completed landing page layout

--- a/client/templates/header.html
+++ b/client/templates/header.html
@@ -1,5 +1,5 @@
 <template name="headerTemplate">
-	<div class="navbar navbar-default">
+	<div class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<div class="navbar-brand">
