--- a/client/templates/land.html
+++ b/client/templates/land.html
@@ -1,3 +1,10 @@
 <template name="landingPage">
-	This is the landing
+	<div class="landingWrapper">
+		<div class="landContent">
+			<h2>It's time to play some crosswords. Are you ready?</h2>
+			<button class="btn btn-primary goToCwBtn" id="goToCwBtn">Let's Play</button>
+
+		</div>
+	</div>
+
 </template>
