--- a/client/main.css
+++ b/client/main.css
@@ -1,1 +1,23 @@
 /* CSS declarations go here */
+.main-wrapper {
+	height: 100vh;
+	background: transparent;
+	background-color: #EEEEEE;
+	background: url("http://www.slate.com/content/dam/slate/articles/life/gaming/2016/03/160308_GAME_crossword-scandal.jpg.CROP.promo-xlarge2.jpg");
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.header-template {
+}
+.main-template {
+	padding-top: 50px;
+	min-height: calc(100vh - 20px); 
+	position: relative;
+
+	background: rgba(30,30,30, 0.8);
+}
+.footer-template {
+	background: rgba(30, 30, 30, 1);
+}
