Login cycle completed

--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -1,3 +1,8 @@
 <template name="cwPlayer">
-	THIS IS THE CROSSWORD
+	<div class="cwPlayerWrapper">
+		THIS IS THE CROSSWORD
+		<div class="cwContent" id="cwContent" name="cwContent">
+			{{ theCrossword }}
+		</div>
+	</div>
 </template>
