--- a/client/templates/land.html
+++ b/client/templates/land.html
@@ -2,9 +2,15 @@
 	<div class="landingWrapper">
 		<div class="landContent">
 			<h2>It's time to play some crosswords. Are you ready?</h2>
-			<button class="btn btn-primary goToCwBtn" id="goToCwBtn">Let's Play</button>
+			<a href="/login">
+				<a href="/login">
 
-		</div>
+					<button class="btn btn-primary goToCwBtn" id="goToCwBtn">Login Here</button> </a>
+			</a>
+			
+
+		</div>ls
+
 	</div>
 
 </template>
