--- a/client/templates/footer.html
+++ b/client/templates/footer.html
@@ -1,3 +1,6 @@
 <template name="footerTemplate">
-	THist is the pfooter
+	<div class="text-right footer-copyright">
+		<span>&copy; Copyright 2016 Kalyan Ranjan Parajuli  
+	</span>
+	</div>
 </template>
