--- a/client/templates/land.html
+++ b/client/templates/land.html
@@ -1,4 +1,7 @@
 <template name="landingPage">
+	{{#if currentUser}}
+		{{> dashboard}}
+	{{ else }}
 	<div class="landingWrapper">
 		<div class="landContent">
 			<h2>It's time to play some crosswords. Are you ready?</h2>
@@ -7,10 +10,8 @@
 
 					<button class="btn btn-primary goToCwBtn" id="goToCwBtn">Login Here</button> </a>
 			</a>
-			
-
-		</div>ls
-
+		</div>
 	</div>
+	{{/if}}
 
 </template>
