Working link to cwplayer

--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -30,5 +30,5 @@
 </template>
 
 <template name="CollectionTemplate">
-	<li class="collectionList"><a href="/col/">{{collectionName}}</a></li>
+	<li class="collectionList"><a href="/cwplayer/{{_id}}">{{collectionName}}</a></li>
 </template>
