--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -2,7 +2,7 @@
 	<div class="cwPlayerWrapper">
 		THIS IS THE CROSSWORD
 		<div class="cwContent" id="cwContent" name="cwContent">
-			{{ theCrossword }}
+			<!-- {{ theCrossword }} -->
 		</div>
 	</div>
 </template>
