--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -1,8 +1,8 @@
 <template name="cwPlayer">
 	<div class="cwPlayerWrapper">
-		THIS IS THE CROSSWORD
 		<div class="cwContent" id="cwContent" name="cwContent">
-			<!-- {{ theCrossword }} -->
+			LOADING...
 		</div>
+		<div class="cwLegend" id="cwLegend" name="cwLegend"></div>
 	</div>
 </template>
