--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -4,5 +4,11 @@
 			LOADING...
 		</div>
 		<div class="cwLegend" id="cwLegend" name="cwLegend"></div>
+		<div class="floater"></div>
+		<div class="submitBtn text-center hideIt" id="submitCwBtn">
+			<button class="btn-primary btn"> GO BACK </button>
+				&nbsp; &nbsp; &nbsp; &nbsp;
+			<button class="btn-primary btn">Check</button>
+		</div>
 	</div>
 </template>
