--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -6,9 +6,9 @@
 		<div class="cwLegend" id="cwLegend" name="cwLegend"></div>
 		<div class="floater"></div>
 		<div class="submitBtn text-center hideIt" id="submitCwBtn">
-			<button class="btn-primary btn"> GO BACK </button>
+			<button class="btn-primary btn goBack"> GO BACK </button>
 				&nbsp; &nbsp; &nbsp; &nbsp;
-			<button class="btn-primary btn">Check</button>
+			<button class="btn-primary btn checkCW">Check</button>
 		</div>
 	</div>
 </template>
