--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -3,12 +3,16 @@
 		<div class="cwContent" id="cwContent" name="cwContent">
 			LOADING...
 		</div>
+		<div class="result hideIt"></div>
+		<div class="resultInst hideIt">You can look at your original answer by hovering the mouse over the box.</div>
 		<div class="cwLegend" id="cwLegend" name="cwLegend"></div>
 		<div class="floater"></div>
 		<div class="submitBtn text-center hideIt" id="submitCwBtn">
 			<button class="btn-primary btn goBack"> GO BACK </button>
 				&nbsp; &nbsp; &nbsp; &nbsp;
-			<button class="btn-primary btn checkCW">Check</button>
+				<a href='#' onclick='location.reload(true); return false;'><button class="btn-primary btn goBack"> Rearrange Grid with Same Content </button></a>
+				&nbsp; &nbsp; &nbsp; &nbsp;
+			<button class="btn-primary btn checkCW">SUBMIT PUZZLE</button>
 		</div>
 	</div>
 </template>
