--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -1,6 +1,7 @@
 <template name="dashboard">
 	{{#if currentUser}}
 		<div class="dashboardWrapper">
+			<h1 class="text-center">DASHBOARD</h1>
 			<div class="dashboardContent col-xs-12">
 				<div class="personalColDiv colDiv col-md-6 col-sm-12">
 					<h3>Your Collections</h3>
