--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -1,25 +1,106 @@
 <template name="dashboard">
+<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+
+
 	{{#if currentUser}}
 		<div class="dashboardWrapper">
 			<h1 class="text-center">DASHBOARD</h1>
-			<div class="dashboardContent col-xs-12">
-				<div class="personalColDiv colDiv col-md-6 col-sm-12">
-					<h3>Your Collections</h3>
-					{{#each personalCollections}}
-					<ul class="list-group">
-						{{> CollectionTemplate}}
-					</ul>
-					{{/each}}
-				</div>
-				<div class="globalColDiv colDiv col-md-6 col-sm-12">
-					<h3>Global Collections</h3>
-					{{#each globalCollections}}
-					<ul class="list-group">
-						{{> CollectionTemplate}}
-					</ul>
-					{{/each}}
-				</div>
+			<div class="dashboardTabSelect col-xs-12">
+				<!-- Nav tabs -->
+				<ul class="nav nav-tabs" role="tablist">
+				    <li role="presentation" class="active"><a href="#dictionaries" aria-controls="home" role="tab" data-toggle="tab" class=" dbtab">Collections</a></li>
+				    <li role="presentation"><a href="#people" class="dbtab" aria-controls="profile" role="tab" data-toggle="tab">People</a></li>
+				    <li role="presentation"><a href="#scoreboard" class="dbtab" aria-controls="messages" role="tab" data-toggle="tab">Scoreboard</a></li>
+
+				    <div class="al">
+				    	<a href="/creator">
+				    		<span class="newCollText">
+				    			Create a new collection 
+				    		</span>
+				    	</a>
+				    	&nbsp; &nbsp; &nbsp;
+				    	<span class="onlineToggle">
+  							<input type="checkbox" class="onlineToggleBox" data-toggle="toggle" data-on="Online" data-off="Offline" data-height="15">
+				    	</span>
+
+				    </div>
+				</ul>
+
+				
 			</div>
+			<!-- Tab panes -->
+			<div class="tab-content">
+			    <div role="tabpanel" class="tab-pane active" id="dictionaries">
+			    	<div class="dbCollectionContent col-xs-12">
+						<div class="personalColDiv colDiv col-md-6 col-sm-12">
+							<h3 class="text-center">Your Personal Dictionaries</h3>
+							<ul class="list-group">
+								
+								<li class="dictionaryList"><li>
+									<div class="dictTempDiv">
+										<b>SAT Practice Words</b> - Set of Words and Meanings from Collegeboard SAT Practice Book
+										<br />
+										<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+										&nbsp;&nbsp;&nbsp;
+										<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+									</div>
+								</li>
+								<li>
+									<div class="dictTempDiv">
+										<b>Chemical Compounds</b> - Find the commmon words for the Compounds
+										<br />
+										<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+										&nbsp;&nbsp;&nbsp;
+										<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+									</div>
+								</li></li>
+							</ul>
+						</div>
+
+						<div class="globalColDiv colDiv col-md-6 col-sm-12">
+							<h3 class="text-center">Global Dictionaries</h3>
+							<ul class="list-group">
+								<li>
+									<div class="dictTempDiv">
+										<b>Game of Thrones Houses</b> - Find the noble houses in Game Of Thones by the city or place they are located in
+										<br />
+										<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+										&nbsp;&nbsp;&nbsp;
+										<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+									</div>
+								</li>
+								<li>
+									<div class="dictTempDiv">
+										<b>Country and Prominient Figures</b> - Name the country these prominient personnels come from.
+										<br />
+										<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+										&nbsp;&nbsp;&nbsp;
+										<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+									</div>
+								</li>
+								<li>
+									<div class="dictTempDiv">
+										<b>IT companies and founders</b> - Name the companies these people started
+										<br />
+										<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+										&nbsp;&nbsp;&nbsp;
+										<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+			    </div>	
+			    <div role="tabpanel" class="tab-pane" id="people">
+			    	<!-- PEOPLE -->
+			    </div>
+			    <div role="tabpanel" class="tab-pane" id="scoreboard">
+			    	<!-- SCOREBOARD -->
+			    </div>
+  			</div>
+
+			
 		</div>
 		
 	{{else}}
@@ -27,6 +108,12 @@
 	{{/if}}
 </template>
 
-<template name="CollectionTemplate">
-	<li class="collectionList"><a href="/cwplayer/{{_id}}">{{collectionName}}</a></li>
+<template name="dictionaryTemplate">
+	<div class="dictTempDiv">
+		<b>Hello</b> - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis soluta quae neque dolorem similique quia, modi quam vel sapiente cum assumenda quo dolor eum ullam, voluptas deleniti facilis recusandae fugiat?
+		<br />
+		<a href="/cwplayer"><button class="btn btn-info btn-sm">Play</button></a>
+		&nbsp;&nbsp;&nbsp;
+		<button class="btn btn-success btn-sm play-online-button">Play Online</button>
+	</div>
 </template>
