--- a/client/templates/creator.html
+++ b/client/templates/creator.html
@@ -33,6 +33,15 @@
 							<textarea class="form-control" id="colPairs" placeholder="Input minimum of 5 word-hint pairs separated by hyphen (-), each separated by comma. Eg."></textarea>
 						</div>
 					</div>
+					<div class="form-group">
+						<label for="colPairs" class="control-label col-xs-3">
+							Make Public
+						</label>
+						<div class="col-xs-9">
+							<input type="checkbox" class="form-control globalCheck" id="colGlobal" />
+							 <label for="colGlobal"></label>
+						</div>
+					</div>
 
 					<div class="form-group">
 						<div class="col-xs-offset-3 col-xs-9">
