--- a/client/templates/cwplayer.html
+++ b/client/templates/cwplayer.html
@@ -1,20 +1,45 @@
 <template name="cwPlayer">
 	<div class="cwPlayerWrapper">
-		<h3>{{dict.title}}</h3>
-		<h4>{{dict.desc}}</h4>
-		<div class="cwContent" id="cwContent" name="cwContent">
-			<b>LOADING...</b>
+		<div class="printableArea">
+			<h3>{{dict.title}}</h3>
+			<h4>{{dict.desc}}</h4>
+			<div class="cwContent" id="cwContent" name="cwContent">
+				<b>LOADING...</b>
+			</div>
 		</div>
 		<div class="result hideIt"></div>
 		<div class="resultInst hideIt">You can look at your original answer by hovering the mouse over the box.</div>
 		<div class="cwLegend col-lg-offset-2 col-lg-10" id="cwLegend" name="cwLegend"></div>
 		<div class="floater"></div>
+	
 		<div class="submitBtn text-center hideIt" id="submitCwBtn">
 			<button class="btn-primary btn goBack"> GO BACK </button>
 				&nbsp; &nbsp; &nbsp; &nbsp;
 				<a href='/cwplayer/{{dict._id}}' onclick='location.reload(true); return false;'><button class="btn-primary btn goBack"> Rearrange Grid with Same Content </button></a>
 				&nbsp; &nbsp; &nbsp; &nbsp;
 			<button class="btn-primary btn checkCW">SUBMIT PUZZLE</button>
+			<!-- <br />
+			<br />
+			<p>
+				<input type="button" class="btn-default" onclick="printDiv('printableArea')" value="Print Crossword" />
+				<button onclick="window.print();">CLICK HERE TO PRINT FORM!</button>
+
+			</p> -->
 		</div>
+		
 	</div>
+<!-- 	<script type="text/javascript">
+	function printDiv(divName) {
+	alert("NO");
+    var printContents = document.getElementById(divName).innerHTML;
+    var originalContents = document.body.innerHTML;
+
+    document.body.innerHTML = printContents;
+
+    window.print();
+
+     document.body.innerHTML = originalContents;
+	}
+</script> -->
 </template>
+
